[update] Last stable version

--- a/Resources/views/auth_layout.html.twig
+++ b/Resources/views/auth_layout.html.twig
@@ -22,7 +22,7 @@
                 
     </head>    
     <body class="main-content">
-        <div align="center">
+        <div id="authContainer" align="center">
             <div class="panel panel-default panelAuth" align="left">
                 {% block layout_panel_title %}
                 <div class="panel-heading"><span class="glyphicon glyphicon-book"></span> Panel Title</div>
